--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,9 +1,12 @@
 ---
 layout: default
 ---
+
+<html>
+
 <article class="post h-entry" itemscope itemtype="http://schema.org/BlogPosting">
 
-  <header class="post-header">
+  <!-- <header class="post-header"> -->
     <h1 
       class="post-title p-name" itemprop="name headline">{{ page.title | escape }}
       • {% include read_time.html -%}
@@ -68,3 +71,7 @@ layout: default
   {%- endif -%}
   <a class="u-url" href="{{ page.url | relative_url }}" hidden></a>
 </article>
+</main>
+
+
+</html>
